--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -1,3 +1,5 @@
+/*************  CLUSTER   ************/
+
 .marker-cluster{
 	border-radius: 40px;
 	margin-left: -38px !important;
@@ -41,4 +43,15 @@
 	padding: 5px !important;
 	font-size: 15px !important;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+}
+
+/*************  POPUP   ************/
+item_map_list .left-col .thumbnail-profil {
+
+    width: 50px;
+    height: 50px;
+    background-color: #DADADA;
+    border-radius: 4px;
+    float: right;
+
 }
