Modif cluster small css

--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -9,6 +9,7 @@
 	height: 77px !important;
 	background-image: url("../images/markers/marker_cluster.png");
 	background-color: transparent !important;
+    background-repeat: no-repeat;
 }
 
 .marker-cluster div{
@@ -31,18 +32,20 @@
 	height: 55px !important;
 	background-image: url("../images/markers/marker_cluster_small.png");
 	background-color: transparent !important;
+    background-repeat: no-repeat;
 }
 
 .marker-cluster-small div{
 	border-radius: 25px;
 	margin-left: 0px !important;
 	margin-top: 0px !important;
-	width: 40px !important;
-	height: 40px !important;
+	width: 20px !important;
+	height: 20px !important;
 	background-color: #FFF !important;
-	padding: 5px !important;
+	padding: 10px !important;
 	font-size: 15px !important;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+    color : black;
 }
 
 /*************  POPUP   ************/
