--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -16,7 +16,7 @@
 	border-radius: 25px;
 	width: 53px !important;
 	height: 53px !important;
-	background-color: #FFF !important;
+	background-color: transparent !important;
 	padding: 10px !important;
 	font-size: 15px !important;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
@@ -37,11 +37,11 @@
 
 .marker-cluster-small div{
 	border-radius: 25px;
-	margin-left: 0px !important;
+	margin-left: 6px !important;
 	margin-top: 0px !important;
 	width: 20px !important;
 	height: 20px !important;
-	background-color: #FFF !important;
+	background-color: transparent !important;
 	padding: 10px !important;
 	font-size: 15px !important;
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
